Colaboratory を使用して作成しました

--- a/TITANIC(machine_learning).ipynb
+++ b/TITANIC(machine_learning).ipynb
@@ -30,6 +30,61 @@
     },
     {
       "metadata": {
+        "id": "bcvuKsltZ0Fq",
+        "colab_type": "toc"
+      },
+      "cell_type": "markdown",
+      "source": [
+        ">[課題](#scrollTo=sv4InRy64Nbq)\n",
+        "\n",
+        ">[セットアップ](#scrollTo=48U-RYvdEw8O)\n",
+        "\n",
+        ">[TITANIC](#scrollTo=hcLNDX0X4kBG)\n",
+        "\n",
+        ">[TITANIC2](#scrollTo=8EWmVPqlK6iB)\n",
+        "\n",
+        ">[TITANIC3](#scrollTo=WP1agbRJE6py)\n",
+        "\n",
+        ">>[ランダムフォレスト](#scrollTo=9CKUEv4-5xty)\n",
+        "\n",
+        ">>>[グリッドサーチ](#scrollTo=6b5Y_Lq1EDL7)\n",
+        "\n",
+        ">>[ブースティング](#scrollTo=O3_cUkfDb6aW)\n",
+        "\n",
+        ">>>[XGBoost](#scrollTo=WNceH8kb2hcA)\n",
+        "\n",
+        ">>>>[n_estimators](#scrollTo=vdfP_Pq-mJBK)\n",
+        "\n",
+        ">>>>[max_depth, min_child_weight](#scrollTo=KdAtKvBonZ4D)\n",
+        "\n",
+        ">>>>[gamma](#scrollTo=d5ClTaAXR456)\n",
+        "\n",
+        ">>>>[subsample and colsample_bytree](#scrollTo=vaF-7DW4SXCE)\n",
+        "\n",
+        ">>>>[reg_alpha](#scrollTo=9_WKLWrbUp2G)\n",
+        "\n",
+        ">>>>[learning_rate](#scrollTo=yAsaG6-RV4y_)\n",
+        "\n",
+        ">>[SVM](#scrollTo=3vHnQXNT6Atj)\n",
+        "\n",
+        ">[アップロード](#scrollTo=pjHtrbOk_eck)\n",
+        "\n"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "sv4InRy64Nbq",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "# 課題\n",
+        "\n",
+        "TITANICの乗客の情報から、その人が生き残るかどうかを予測する"
+      ]
+    },
+    {
+      "metadata": {
         "id": "48U-RYvdEw8O",
         "colab_type": "text"
       },
