Colaboratory を使用して作成しました

--- a/TITANIC(machine_learning).ipynb
+++ b/TITANIC(machine_learning).ipynb
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "[View in Colaboratory](https://colab.research.google.com/github/taiki323/kaggle_training/blob/master/TITANIC(machine_learning).ipynb)"
+        "<a href=\"https://colab.research.google.com/github/taiki323/kaggle_training/blob/master/TITANIC(machine_learning).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
