--- a/TITANIC(machine_learning).ipynb
+++ b/TITANIC(machine_learning).ipynb
@@ -9,8 +9,7 @@
       "collapsed_sections": [
         "8EWmVPqlK6iB"
       ],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -18,16 +17,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/taiki323/kaggle_training/blob/master/TITANIC(machine_learning).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "metadata": {
         "id": "bcvuKsltZ0Fq",
